--- a/package.json
+++ b/package.json
@@ -5,23 +5,20 @@
     "description": "",
     "main": "./src/app.js",
     "scripts": {
-      "start": "node ./src/app.js",
-      "dev": "npx nodemon ./src/app.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node ./src/app.js",
+        "dev": "npx nodemon ./src/app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "",
+    "author": "Marcos Vinícius Pedreira Vieira",
     "license": "ISC",
     "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "joi": "^17.9.2",
-      "mongodb": "^5.5.0",
-      "mongoose": "^7.1.1",
-      "nodemon": "^2.0.22",
-      "pg": "^8.10.0",
-      "bcrypt": "^5.1.0"
-
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "joi": "^17.9.2",
+        "jsonwebtoken": "^9.0.0",
+        "nodemon": "^2.0.22",
+        "pg": "^8.10.0"
     }
-  }
-  
+}
